--- a/DIC/readme
+++ b/DIC/readme
@@ -1,1 +1,9 @@
 
+## Deviance Information Criteria for Mixtures of
+Distributions
+
+As a Bayesian criterion for model comparison, Spiegelhalter et al. (2002) proposed the deviance information criterion (DIC) consisting of two parts: a classical estimate of fit and the effective number of parameters. This model comparison method is constructed based on generalized linear models, and thus it may be inappropriate to use the classical DIC in the cases of the mixtures of distributions because of the “label switching” problem (Marin et al. 2005). Celeux et al. (2006) proposed several modified DIC constructions and assessed their behaviors under a mixture of distributions, but they do not provide the properties of alternative criteria well enough and those alternatives still suffer from the issue of using the observation data twice in estimating the posterior distribution and in computing the posterior mean of the expected log-likelihood. Here, we study DIC3, one of the variations Celeux discussed, and propose a new criterion to lessen the potential bias from using the dataset twice. We compare our proposed criterion to other model selection criteria based on two numerical examples, the Galaxy dataset (Roeder 1990) and the simulated dataset.
+
+### Keywords
+
+DIC, Mixtures of Distributions, Bayesian nonparametric models
